Converted trigger list to checklist and moved the info icon outside of the list column

--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
     <!-- <link rel="stylesheet" href="vendor/some.contrib.css"> -->
     <!-- bower:css -->
     <link rel="stylesheet" href="lib/ionic/release/css/ionic.css" />
-    <!-- font awesome --><link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <!-- font awesome --><link rel="stylesheet" href="/styles/font-awesome.min.css">
     <!-- endbower -->
     <!-- endbuild -->
 
