--- a/www/index.html
+++ b/www/index.html
@@ -66,7 +66,7 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-
+        <script src="scripts/angular-sanitize.min.js"></script>
 
         <!-- build:js scripts/scripts.js -->
         <script src="scripts/config.js"></script>
